[project]
name = "gradio-sample-viewer"
version = "0.1.0"
description = "A high-level visualization gradio-based app for quickly showing off results."
keywords = ["gradio", "visualization", "sample viewer"]
readme = "README.md"
authors = [{ name = "alex-bene", email = "alexandrosbene@gmail.com" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.32.0,<6", # doesn't support changing `samples_gradio` inside gr.render
    "omegaconf>=2.3.0",
    "pandas>=2.0.3",
    "plotly>=6.5.2",
    "typer>=0.21.1",
]

[dependency-groups]
dev = ["pre-commit>=3.5.0", "ruff>=0.15.0"]

[project.urls]
Homepage = "https://github.com/alex-bene/gradio_sample_viewer"
Repository = "https://github.com/alex-bene/gradio_sample_viewer"

[project.scripts]
gradio-sample-viewer = "gradio_sample_viewer:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
exclude = ["**/__pycache__", "**/.*"]
typeCheckingMode = "off"
